- changed dev environment from react-script to webpack - integrated deployment between java & webpack - updated webpack build for frontend

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE HTML>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8"/>
-    <title>Smartics2(JSP) - Administrative Functions</title>
+    <meta charset="UTF-8" />
+    <title>Administrative Functions</title>
+    <link rel="manifest" href="/adminfunc/manifest.json" />
+    <link rel="shortcut icon" href="/adminfunc/favicon.ico" />
 </head>
 <body>
 <div id="root"></div>
-
-<script src="/admin_func/main/js/bundle.js" />
-  <script src="/admin_func/js/bundle.js" />
-  <div>Current index</div>
-
-</body>
+<script type="text/javascript" src="/adminfunc/vendor.js"></script><script type="text/javascript" src="/adminfunc/bundle.js"></script></body>
 </html>
