- Added layer as CoreLayout - changed scss - updated route for login & landing at same route

--- a/src/main/js/src/styles/base.scss
+++ b/src/main/js/src/styles/base.scss
@@ -1,6 +1,5 @@
-.test {
-    border: 1px solid red;
-}
+@import '_login-comp.scss';
+
 
 .flex-container {
     display: flex;
@@ -116,31 +115,4 @@
     
 
     /* border: 1px solid cyan; */
-}
-
-.content-warning-left, .content-user-id-left, .content-password-left {
-    padding-top: 1em;
-    text-align: center;
-}
-
-.content-warning-left {
-    height: 100px;
-}
-
-.content-warning-right {
-    TEXT-ALIGN: justify;
-    padding: 1em;
-}
-
-.content-user-id-left, .content-password-left {
-    height: 35px;
-}
-
-.content-user-id-right, .content-password-right {
-    line-height: 49px;
-}
-
-.login-confirm, .login-clear {
-    margin: 1em;
-    width: 150px;
 }
