--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="/adminfunc/favicon.ico" />
 </head>
 <body>
+<h3>hello2</h3>
 <div id="root"></div>
 <script type="text/javascript" src="/adminfunc/vendor.js"></script><script type="text/javascript" src="/adminfunc/bundle.js"></script></body>
 </html>
