- updated login logic - added menu page - added change password page

--- a/src/main/resources/templates/eServices2/e-services-2-menu.html
+++ b/src/main/resources/templates/eServices2/e-services-2-menu.html
@@ -5,13 +5,30 @@
     <meta charset="UTF-8"></meta>
     <title>Title</title>
 
-    <link rel="stylesheet" href="/adminfunc/css/style.css">
-    <link rel="stylesheet" href="/adminfunc/css/e-services-2-menu.css">
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
+
+    <link rel="stylesheet" href="/adminfunc/css/style.css"></link>
+    <link rel="stylesheet" href="/adminfunc/css/e-services-2-menu.css"></link>
+
+    <!--<script th:inline="javascript">-->
+    <!--/*<![CDATA[*/-->
+
+            <!--$(function() {-->
+                      <!--alert('login_ready');-->
+
+                <!--var password = [[${userDTO.password}]];-->
+                <!--alert(password);-->
+            <!--});-->
+
+    <!--/*]]>*/-->
+    <!--</script>-->
 
 </head>
 
 <body>
 <div>
+    <h3>eServicesMenu</h3>
     <div class="flex-container">
         <div class="flex-item-1 header-item-left">
             <span>e-Services 2</span>
