--- a/src/main/resources/templates/Auth/login.html
+++ b/src/main/resources/templates/Auth/login.html
@@ -7,11 +7,13 @@
     <script src="/adminfunc/js/lib/jquery-3.3.1.min.js"></script>
     <script src="/adminfunc/js/lib/lodash.min.js"></script>
 
-    <script src="/adminfunc/js/login.js"></script>
+    <!--<script src="/adminfunc/js/login.js"></script>-->
 
     <!--<link rel="stylesheet" href="${style.css}" />-->
     <link rel="stylesheet" href="/adminfunc/css/style.css" />
     <link rel="stylesheet" href="/adminfunc/css/login.css" />
+
+
 
 </head>
 <body>
