MOD: Integrated with Spring-Security

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" ></meta>
     <title>Administrative Functions</title>
-    <link rel="manifest" href="/adminfunc/manifest.json" />
-    <link rel="shortcut icon" href="/adminfunc/favicon.ico" />
 </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/adminfunc/vendor.js"></script><script type="text/javascript" src="/adminfunc/bundle.js"></script></body>
+
+<div sec:authentication="name">User Name </div>
+
+<div th:text ="${#authentication.principal.displayName}"></div>
+<a href="index.html" th:href="@{/AUTH/logout.html}">Logout NOW</a>
+</body>
 </html>
