fixed alert blocking the page

--- a/src/main/resources/templates/Auth/change-pwd.html
+++ b/src/main/resources/templates/Auth/change-pwd.html
@@ -27,7 +27,9 @@
         // alert(err);
 
         if (errorCode == 1001) {
-            alert(errorMessage);
+            setTimeout(function () {
+                alert(errorMessage);
+            }, 100)
         }
 
 
