- menu navigation name updated - change password numeric and alpha checking - udpated date format

--- a/src/main/resources/templates/Auth/login.html
+++ b/src/main/resources/templates/Auth/login.html
@@ -6,14 +6,16 @@
 
     <script src="/adminfunc/js/lib/jquery-3.3.1.min.js"></script>
     <script src="/adminfunc/js/lib/lodash.min.js"></script>
+    <script src="/adminfunc/js/lib/moment.min.js"></script>
 
+    <script src="/adminfunc/js/common.js"></script>
     <script src="/adminfunc/js/login.js"></script>
 
     <!--<link rel="stylesheet" href="${style.css}" />-->
-    <link rel="stylesheet" href="/adminfunc/css/style.css" />
-    <link rel="stylesheet" href="/adminfunc/css/login.css" />
+    <link rel="stylesheet" href="/adminfunc/css/style.css"/>
+    <link rel="stylesheet" href="/adminfunc/css/login.css"/>
 
-    <script type="text/javascript" th:inline="javascript" th:if="${userDTO}" >
+    <script type="text/javascript" th:inline="javascript" th:if="${userDTO}">
         /*<![CDATA[*/
 
 
@@ -31,7 +33,12 @@
         /*]]>*/
     </script>
 
-    <script type="text/javascript"  >
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $('#todayDate').html(today);
+        });
+
 
         function onClear() {
             $('#loginId').val('');
@@ -45,18 +52,18 @@
 <div>
 
     <!--<div th:if="${userDTO}">-->
-        <!--<h3 th:text="${userDTO.loginId}" ></h3><br />-->
-        <!--<h3 th:text="${userDTO.password}"></h3><br />-->
+    <!--<h3 th:text="${userDTO.loginId}" ></h3><br />-->
+    <!--<h3 th:text="${userDTO.password}"></h3><br />-->
     <!--</div>-->
 
     <div class="flex-container">
         <div class="flex-item-1 header-item-left">
-            <span>e-Services 2</span>
+            <span>e-Services-2</span>
         </div>
         <div></div>
         <div class="flex-item-1 header-item-right">
                 <span>Date:
-                    <b>Thusday, 1 February 2018</b>
+                    <b id="todayDate"></b>
                 </span>
         </div>
     </div>
@@ -84,13 +91,13 @@
                     </span>
             </div>
         </div>
-        <form id="" method="post" action="menu" >
+        <form id="" method="post" action="menu">
             <div class="flex-container">
                 <div class="flex-item-1 field-name content-user-id-left">
                     <b>User ID :</b>
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
-                    <input id="loginId" name="loginId" value="SCUSER08" />
+                    <input id="loginId" name="loginId" value=""/>
                     <!--SCUSER08-->
                 </div>
             </div>
@@ -99,16 +106,15 @@
                     <b>Password :</b>
                 </div>
                 <div class="flex-item-2 field-name content-password-right">
-                    <input id="password" name="password" type="password" value="password" />
+                    <input id="password" name="password" type="password" value=""/>
                 </div>
             </div>
             <div class="flex-container">
                 <div class="flex-item-1"></div>
                 <div class="flex-item-2">
-                    <input type="submit" class="ButtonStyle login-confirm" value="Confirm"  />
+                    <input type="submit" class="ButtonStyle login-confirm" value="Confirm"/>
 
-                    <input type="button" class="ButtonStyle login-clear" value="Clear" onclick="onClear()" />
-
+                    <input type="button" class="ButtonStyle login-clear" value="Clear" onclick="onClear()"/>
 
 
                 </div>
