--- a/src/main/resources/templates/Auth/change-pwd-fail.html
+++ b/src/main/resources/templates/Auth/change-pwd-fail.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="/adminfunc/css/style.css"></link>
     <link rel="stylesheet" href="/adminfunc/css/login-fail.css"></link>
 
+    <script src="/adminfunc/js/lib/jquery-3.3.1.min.js"></script>
+    <script src="/adminfunc/js/lib/lodash.min.js"></script>
+    <script src="/adminfunc/js/lib/moment.min.js"></script>
+
+    <script src="/adminfunc/js/common.js"></script>
+
+    <script type="text/javascript"  >
+
+        jQuery(document).ready(function () {
+            $('#todayDate').html(today);
+        });
+
+    </script>
 
 </head>
 
@@ -26,12 +39,12 @@
 
     <div class="flex-container">
         <div class="flex-item-1 header-item-left">
-            <span>e-Services 2</span>
+            <span>e-Services-2</span>
         </div>
         <div></div>
         <div class="flex-item-1 header-item-right">
                 <span>Date:
-                    <b>Thusday, 1 February 2018</b>
+                    <b id="todayDate"></b>
                 </span>
         </div>
     </div>
