--- a/src/main/resources/templates/Auth/change-pwd.html
+++ b/src/main/resources/templates/Auth/change-pwd.html
@@ -7,6 +7,9 @@
 
     <script src="/adminfunc/js/lib/jquery-3.3.1.min.js"></script>
     <script src="/adminfunc/js/lib/lodash.min.js"></script>
+    <script src="/adminfunc/js/lib/moment.min.js"></script>
+
+    <script src="/adminfunc/js/common.js"></script>
 
     <link rel="stylesheet" href="/adminfunc/css/style.css" />
     <link rel="stylesheet" href="/adminfunc/css/change-pwd.css" />
@@ -38,6 +41,10 @@
 
     <script type="text/javascript"  >
 
+        jQuery(document).ready(function () {
+            $('#todayDate').html(today);
+        });
+
         function onClear() {
             $('#oldPassword').val('');
             $('#newPassword').val('');
@@ -52,12 +59,12 @@
     <div>
         <div class="flex-container">
             <div class="flex-item-1 header-item-left">
-                <span>e-Services 2</span>
+                <span>e-Services-2</span>
             </div>
             <div></div>
             <div class="flex-item-1 header-item-right">
                 <span>Date:
-                    <b>Thusday, 1 February 2018</b>
+                    <b id="todayDate"></b>
                 </span>
             </div>
         </div>
