--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,32 +9,170 @@
     <script src="/adminfunc/js/lib/lodash.min.js"></script>
     <script src="/adminfunc/js/lib/moment.min.js"></script>
 
+    <script src="/adminfunc/js/common.js"></script>
+
     <link rel="stylesheet" href="/adminfunc/css/style.css"></link>
     <link rel="stylesheet" href="/adminfunc/css/menu.css"></link>
+
+    <script type="text/javascript"  >
+
+
+
+
+
+        jQuery(document).ready(function () {
+            $('#todayDate').html(today);
+
+            $('#eServices2SubCat').html(eServices2SelectedSubCat);
+            $('#smartics2SubCat').html(smartics2SelectedSubCat);
+            $('#rmSubCat').html(rmSelectedSubCat);
+        });
+
+        function onEServices2SubCatSelected(subCat) {
+            switch (subCat) {
+                case SUB_CAT_MENU.ENQUIRY: {
+                    eServices2SelectedSubCat = SUB_CAT_MENU.ENQUIRY;
+                    break;
+                }
+                case SUB_CAT_MENU.MAINTENANCE: {
+                    eServices2SelectedSubCat = SUB_CAT_MENU.MAINTENANCE;
+                    break;
+                }
+                case SUB_CAT_MENU.MANAGEMENT: {
+                    eServices2SelectedSubCat = SUB_CAT_MENU.MANAGEMENT;
+                    break;
+                }
+            }
+            $('#eServices2SubCat').html(eServices2SelectedSubCat);
+        }
+
+        function onSmartics2SubCatSelected(subCat) {
+            switch (subCat) {
+                case SUB_CAT_MENU.ENQUIRY: {
+                    smartics2SelectedSubCat = SUB_CAT_MENU.ENQUIRY;
+                    break;
+                }
+                case SUB_CAT_MENU.MAINTENANCE: {
+                    smartics2SelectedSubCat = SUB_CAT_MENU.MAINTENANCE;
+                    break;
+                }
+                case SUB_CAT_MENU.MANAGEMENT: {
+                    smartics2SelectedSubCat = SUB_CAT_MENU.MANAGEMENT;
+                    break;
+                }
+            }
+            $('#smartics2SubCat').html(smartics2SelectedSubCat);
+        }
+
+        function onRmSubCatSelected(subCat) {
+            switch (subCat) {
+                case SUB_CAT_MENU.ENQUIRY: {
+                    rmSelectedSubCat = SUB_CAT_MENU.ENQUIRY;
+                    break;
+                }
+                case SUB_CAT_MENU.MAINTENANCE: {
+                    rmSelectedSubCat = SUB_CAT_MENU.MAINTENANCE;
+                    break;
+                }
+                case SUB_CAT_MENU.MANAGEMENT: {
+                    rmSelectedSubCat = SUB_CAT_MENU.MANAGEMENT;
+                    break;
+                }
+            }
+            $('#rmSubCat').html(rmSelectedSubCat);
+        }
+
+        // function onSubCatSelected(cat, subCat) {
+        //     console.log('onSubCatSelected');
+        //     console.log(cat);
+        //     console.log(subCat);
+        //
+        //
+        //     switch (cat) {
+        //         case CAT_MENU.E_SERVICES_2: {
+        //             switch (subCat) {
+        //                 case SUB_CAT_MENU.ENQUIRY: {
+        //                     eServices2SelectedSubCat = SUB_CAT_MENU.ENQUIRY;
+        //                     break;
+        //                 }
+        //                 case SUB_CAT_MENU.MAINTENANCE: {
+        //                     eServices2SelectedSubCat = SUB_CAT_MENU.MAINTENANCE;
+        //                     break;
+        //                 }
+        //                 case SUB_CAT_MENU.MANAGEMENT: {
+        //                     eServices2SelectedSubCat = SUB_CAT_MENU.MANAGEMENT;
+        //                     break;
+        //                 }
+        //             }
+        //             $('#eServices2SubCat').html(eServices2SelectedSubCat);
+        //             break;
+        //         }
+        //         case CAT_MENU.SMARTICS_2: {
+        //             switch (subCat) {
+        //                 case SUB_CAT_MENU.ENQUIRY: {
+        //                     smartics2SelectedSubCat = SUB_CAT_MENU.ENQUIRY;
+        //                     break;
+        //                 }
+        //                 case SUB_CAT_MENU.MAINTENANCE: {
+        //                     smartics2SelectedSubCat = SUB_CAT_MENU.MAINTENANCE;
+        //                     break;
+        //                 }
+        //                 case SUB_CAT_MENU.MANAGEMENT: {
+        //                     smartics2SelectedSubCat = SUB_CAT_MENU.MANAGEMENT;
+        //                     break;
+        //                 }
+        //             }
+        //             $('#smartics2SubCat').html(smartics2SelectedSubCat);
+        //             break;
+        //         }
+        //         case CAT_MENU.RM: {
+        //             switch (subCat) {
+        //                 case SUB_CAT_MENU.ENQUIRY: {
+        //                     rmSelectedSubCat = SUB_CAT_MENU.ENQUIRY;
+        //                     break;
+        //                 }
+        //                 case SUB_CAT_MENU.MAINTENANCE: {
+        //                     rmSelectedSubCat = SUB_CAT_MENU.MAINTENANCE;
+        //                     break;
+        //                 }
+        //                 case SUB_CAT_MENU.MANAGEMENT: {
+        //                     rmSelectedSubCat = SUB_CAT_MENU.MANAGEMENT;
+        //                     break;
+        //                 }
+        //             }
+        //             $('#rmSubCat').html(rmSelectedSubCat);
+        //             break;
+        //         }
+        //     }
+        // }
+
+
+    </script>
 
 </head>
 
 <body>
-    <div>
+    <div th:if="${userDTO}">
         <div class="flex-container">
             <div class="flex-item-1 header-item-left">
-                <span>e-Services 2</span>
+                <span>e-Services-2</span>
             </div>
             <div></div>
             <div class="flex-item-1 header-item-right">
+                <span>| userID: <b th:text="${userDTO.loginId}"></b> |</span>
                 <span>Date:
-                    <b>Thusday, 1 February 2018</b>
+                    <b id="todayDate"></b>
                 </span>
             </div>
         </div>
         <div class="grid-container ">
             <div class="main-menu">
 
-                <input type="radio" id="main-tab-1" name="main-tabs" checked="checked" />
+                <input type="radio" id="main-tab-1" name="main-tabs" checked="checked"  />
                 <label for="main-tab-1" style="margin-left: 30px;">e-Services-2</label>
-                <input type="radio" id="main-tab-2" name="main-tabs" />
+                <input type="radio" id="main-tab-2" name="main-tabs"  />
                 <label for="main-tab-2">SMARTICS-2</label>
-                <input type="radio" id="main-tab-3" name="main-tabs" />
+                <input type="radio" id="main-tab-3" name="main-tabs"  />
                 <label for="main-tab-3">RM</label>
                 <div style="float: right;">
                     <form action="login.html" method="GET">
@@ -47,18 +185,18 @@
                 <div id="main-content-1">
                     <div class="flex-container grid-nav-container">
                         <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">e-Services-2 > Enquiry</span>
+                            <span style=" width: '100%'">e-Services-2 > <span id="eServices2SubCat"></span></span>
                         </div>
                     </div>
                     <div class="content-container ">
                         <div class="menu-container flex-container ">
                             <div class="flex-item-1">&nbsp;</div>
                             <div class="sub-menu">
-                                <input type="radio" id="sub-tab-1-1" name="sub-tabs-1" checked="checked" />
+                                <input type="radio" id="sub-tab-1-1" name="sub-tabs-1" checked="checked" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
                                 <label for="sub-tab-1-1">Enquiry</label>
-                                <input type="radio" id="sub-tab-1-2" name="sub-tabs-1" />
+                                <input type="radio" id="sub-tab-1-2" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
                                 <label for="sub-tab-1-2">Manatenance</label>
-                                <input type="radio" id="sub-tab-1-3" name="sub-tabs-1" />
+                                <input type="radio" id="sub-tab-1-3" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MANAGEMENT)" />
                                 <label for="sub-tab-1-3">Management</label>
                                 <div id="sub-content-1-1">
                                     <ul class="func-parent">
@@ -107,16 +245,16 @@
                 <div id="main-content-2">
                     <div class="flex-container grid-nav-container">
                         <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">SMARTICS-2 > Enquiry</span>
+                            <span style=" width: '100%'">SMARTICS-2 > <span id="smartics2SubCat"></span></span>
                         </div>
                     </div>
                     <div class="content-container ">
                         <div class="menu-container flex-container">
                             <div class="flex-item-1">&nbsp;</div>
                             <div class="sub-menu">
-                                <input type="radio" id="sub-tab-2-1" name="sub-tabs-2" checked="checked" />
+                                <input type="radio" id="sub-tab-2-1" name="sub-tabs-2" checked="checked" onchange="onSmartics2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
                                 <label for="sub-tab-2-1">Enquiry</label>
-                                <input type="radio" id="sub-tab-2-2" name="sub-tabs-2" />
+                                <input type="radio" id="sub-tab-2-2" name="sub-tabs-2" onchange="onSmartics2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
                                 <label for="sub-tab-2-2">Manatenance</label>
                                 <!--<input type="radio" id="sub-tab-2-3" name="sub-tabs-2" />-->
                                 <!--<label for="sub-tab-2-3">Management</label>-->
@@ -158,14 +296,14 @@
                 <div id="main-content-3">
                     <div class="flex-container grid-nav-container">
                         <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">RM > Enquiry</span>
+                            <span style=" width: '100%'">RM > <span id="rmSubCat"></span></span>
                         </div>
                     </div>
                     <div class="content-container ">
                         <div class="menu-container flex-container">
                             <div class="flex-item-1">&nbsp;</div>
                             <div class="sub-menu">
-                                <input type="radio" id="sub-tab-3-1" name="sub-tabs-3" checked="checked" />
+                                <input type="radio" id="sub-tab-3-1" name="sub-tabs-3" checked="checked" onchange="onRmSubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
                                 <label for="sub-tab-3-1">Enquiry</label>
                                 <!--<input type="radio" id="sub-tab-3-2" name="sub-tabs-3" />-->
                                 <!--<label for="sub-tab-3-2">Manatenance</label>-->
