--- a/src/main/resources/templates/Auth/login.html
+++ b/src/main/resources/templates/Auth/login.html
@@ -97,7 +97,7 @@
                     <b>User ID :</b>
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
-                    <input id="loginId" name="loginId" value=""/>
+                    <input id="loginId" name="loginId" value="demo001"/>
                     <!--SCUSER08-->
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     <b>Password :</b>
                 </div>
                 <div class="flex-item-2 field-name content-password-right">
-                    <input id="password" name="password" type="password" value=""/>
+                    <input id="password" name="password" type="password" value="password"/>
                 </div>
             </div>
             <div class="flex-container">
