MOD: fixed css linking

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -12,7 +12,7 @@
     <script src="/adminfunc/js/common.js"></script>
 
     <link rel="stylesheet" href="/adminfunc/css/style.css"></link>
-    <link rel="stylesheet" href="/admmvn cleaninfunc/css/menu.css"></link>
+    <link rel="stylesheet" href="/adminfunc/css/menu.css"></link>
 
     <script type="text/javascript"  >
 
