--- a/src/main/resources/templates/eServices2/AccessControl/access-control.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control.html
@@ -10,92 +10,73 @@
 
     <script src="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid.min.js"></script>
 
-    <script th:inline="javascript" src="/adminfunc/js/common.js"></script>
+    <script src="/adminfunc/js/common.js"></script>
 
     <link rel="stylesheet" href="/adminfunc/css/style.css"/>
 
     <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-custom.css"/>
     <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css"/>
 
-    <script>
+    <script type="text/javascript">
         $(document).ready(function () {
-
-            updateNavTitle();
-
-            var names = [
+            let names = [
                 {
-                    'Application Name': 'Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong)',
-                    'Price Name': 'Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong)',
-                    'Valid From': '2017-01-01',
-                    'Valid To': '2018-01-01',
-                    'Payment Code': '500',
-                    'Payment Description': 'Application for HKSAR Passport ',
-                    'Effective Date': '2017-01-01',
-                    'Receipt Print Indicator': 'BOCI',
-                    'Document Issue Indicator': 'ImmD',
-                    'Revenue Code': '500'
-                },
-                {
-                    'Application Name': 'Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong)',
-                    'Price Name': 'Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong)',
-                    'Valid From': '2017-01-01',
-                    'Valid To': '2018-01-01',
-                    'Payment Code': '500',
-                    'Payment Description': 'Application for HKSAR Passport ',
-                    'Effective Date': '2017-01-01',
-                    'Receipt Print Indicator': 'BOCI',
-                    'Document Issue Indicator': 'ImmD',
-                    'Revenue Code': '500'
-                },
-                {
-                    'Application Name': 'Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong)',
-                    'Price Name': 'Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong)',
-                    'Valid From': '2017-01-01',
-                    'Valid To': '2018-01-01',
-                    'Payment Code': '500',
-                    'Payment Description': 'Application for HKSAR Passport ',
-                    'Effective Date': '2017-01-01',
-                    'Receipt Print Indicator': 'BOCI',
-                    'Document Issue Indicator': 'ImmD',
-                    'Revenue Code': '500'
+                    'Effective Date': '13/02/2010 00:00:00',
+                    'To': '01/01/2099 00:00:00',
+                    'Name': '',
+                    'White/Black': 'White',
+                    'Channel': 'W',
+                    'IP/Telephone Number': '10.26.171.83'
                 }
             ];
 
-            $("#appFeeEnqGrid").jsGrid({
-                width: '100%',
-                height: '100%',
+            let grid = $("#accessControlGrid");
+            // console.log(grid);
 
+            grid.jsGrid(
+                {
+                    width: '100%',
+                    height: '100%',
 
-                sorting: false,
-                noDataContent: 'NO data',
+                    sorting: true,
+                    noDataContent: 'NO data',
 
-                // paging: true,
-                // pageSize: 3,
-                // pageButtonCount: 5,
-                // pagerContainer: '#externalPager',
-                // pagerFormat: 'current page: {pageIndex} &nbsp;&nbsp; {first} {prev} {pages} {next} {last} &nbsp;&nbsp; total pages: {pageCount}',
-                // pagePrevText: 'prev',
-                // pageNextText: 'next',
-                // pageFirstText: 'first',
-                // pageLastText: 'last',
-                // pageNavigatorNextText: '&#8230;',
-                // pageNavigatorPrevText: '&#8230;',
+                    data: names,
 
-                data: names,
+                    fields: [
+                        { name: 'Effective Date', type: 'text', width: 70 },
+                        { name: 'To', type: 'text', width: 40 },
+                        { name: 'Name', type: 'text', width: 50 },
+                        { name: 'White/Black', type: 'text', width: 80 },
+                        { name: 'Channel', type: 'text', width: 40 },
+                        { name: 'IP/Telephone Number', type: 'text', width: 80 },
+                        {
+                            type: 'control',
+                            headerTemplate: function () {
+                                let title = '<span>Detail</span>';
+                                return title;
+                            },
+                            itemTemplate: function (value, item) {
+                                let result = jsGrid.fields.control.prototype.itemTemplate.apply(this, arguments);
 
-                fields: [
-                    {name: 'Application Name', type: 'text', width: 100},
-                    {name: 'Price Name', type: 'text', width: 80},
-                    {name: 'Valid From', type: 'text', width: 60},
-                    {name: 'Valid To', type: 'text', width: 60},
-                    {name: 'Payment Code', type: 'text', width: 50},
-                    {name: 'Payment Description', type: 'text', width: 80},
-                    {name: 'Effective Date', type: 'text', width: 80},
-                    {name: 'Receipt Print Indicator', type: 'text', width: 80},
-                    {name: 'Document Issue Indicator', type: 'text', width: 80},
-                    {name: 'Revenue Code', type: 'text', width: 80}
-                ]
-            });
+                                let str = '';
+
+                                str += '<span>';
+                                str += '<a href="" class="RedLink">';
+                                str += 'View';
+                                str += '</a>';
+                                str += '</span>';
+
+                                result = result.add(str);
+
+                                return result;
+                            }
+                        }
+                    ]
+
+                }
+            )
+
 
         });
     </script>
@@ -122,14 +103,13 @@
             <input type="radio" id="main-tab-1" name="main-tabs" checked="checked"/>
             <label for="main-tab-1" style="margin-left: 30px;">e-Services-2</label>
 
-            <input type="radio" id="main-tab-2" name="main-tabs" onclick="navigatePage(PAGE_MENU.LANDING)"/>
+            <input type="radio" id="main-tab-2" name="main-tabs"/>
             <label for="main-tab-2">SMARTICS-2</label>
 
 
-            <a th:href="@{/applicationFeeEnquiry.html}">
-            <input type="radio" id="main-tab-3" name="main-tabs" />
+            <input type="radio" id="main-tab-3" name="main-tabs"/>
             <label for="main-tab-3">RM</label>
-            </a>
+
             <div style="float: right;">
                 <form action="login.html" method="GET">
                     <input type="submit" id="exit-tab" name=""/>
@@ -142,13 +122,31 @@
                 <div class="flex-container grid-nav-container">
                     <div class="flex-item-1 nav-title-left">
                             <span style=" width: '100%'">e-Services-2 >
-                                <span id="eServices2SubCat">Enquiry</span> >
-                                <span id="eServices2Func">Application Fee Enquiry</span>
+                                <span id="eServices2SubCat">Maintenance</span> >
+                                <span id="eServices2Func">Access Control</span>
                             </span>
                     </div>
                 </div>
                 <div class="content-container " style=" height: 300px;">
-                    <div id="appFeeEnqGrid"></div>
+                    <div class="flex-container">
+                        <div class="flex-item-1 ">
+                            <span class="field-name" style="font-size: large; line-height: 30px;">Access Control</span>
+                        </div>
+                        <div style="flex: auto;"></div>
+                        <div class="flex-item-1 SmallButtonStyle" style="margin: 0px 10px;">
+                            <a href="">
+                                <span>Edit Global Parameters</span>
+                            </a>
+                        </div>
+                        <div class="flex-item-1 SmallButtonStyle">
+                            <a href="">
+                                <span>Create New White/Black List</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div style=" margin-top: 1.5em; width: 100%; height: 200px; ">
+                        <div id="accessControlGrid"></div>
+                    </div>
                 </div>
             </div>
             <!--<div id="main-content-2">-->
