--- a/src/main/webapp/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css
+++ b/src/main/webapp/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css
@@ -42,6 +42,7 @@
 
 .jsgrid-grid-header {
     background: #f9f9f9;
+
 }
 
 .jsgrid-header-scrollbar {
@@ -52,7 +53,7 @@
     scrollbar-track-color: #f1f1f1;
     scrollbar-shadow-color: #f1f1f1;
     scrollbar-dark-shadow-color: #f1f1f1;
-    
+
     overflow-y: hidden;
 }
 
@@ -91,7 +92,7 @@
 .jsgrid-header-sort-desc:before {
     /* border-width: 5px 5px 0 5px; */
     /* border-color: #009a67 transparent transparent transparent; */
-    
+
     border-width: 5px 5px 0 5px;
     border-color: cyan transparent transparent transparent;
 
@@ -134,6 +135,7 @@
 .jsgrid-header-row > .jsgrid-header-cell {
     background: #82a579;
     color: white;
+    border: 1px solid white;
 }
 
 .jsgrid-filter-row > .jsgrid-cell {
