--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -57,10 +57,10 @@
                 <label for="main-tab-2">SMARTICS-2</label>
                 <input type="radio" id="main-tab-3" name="main-tabs"  />
                 <label for="main-tab-3">RM</label>
-                <div style="float: right;">
-                    <a th:href="@{/AUTH/logout.html}">
+                <div style="float: right; " >
+                    <a th:href="@{/AUTH/logout.do}" class="exit-btn">
                         <input type="submit" id="exit-tab" name="" />
-                        <label for="exit-tab">Exit</label>
+                        <label for="exit-tab" >Exit</label>
                     </a >
                 </div>
 
