--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -7,16 +7,40 @@
 
 .flex-item-1 {
     flex: 1;
+
 }
 
 .flex-item-2 {
     flex: 2;
 }
 
+.flex-item-7 {
+    flex: 7;
+}
+
 .field-name {
     color: Black;
     font-family: Arial;
     font-size: 14px;
+}
+
+.exit-btn {
+    text-decoration: none;
+    color: white;
+}
+
+.exit-btn > label {
+    font-size: 20px;
+    padding-right: 15px;
+}
+
+.RowSeparator {
+    background: #79A775;
+    width: 100%;
+    height: 3px;
+    margin: 5px 0px;
+    /* margin-top: 10px;
+    margin-bottom: 10px; */
 }
 
 .RedLink {
@@ -65,6 +89,9 @@
     background: #39624C;
     font-weight: bold;
 }
+
+
+
 
 .TopLabel {
     color: White;
@@ -205,7 +232,7 @@
 
 .func-child {
     height: 30px;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 
 .func-bullet {
@@ -225,12 +252,17 @@ main menu
     /* padding: 10px; */
 }
 
-.main-menu input {
+.main-menu > input {
     display: none;
 }
 
-.main-menu #exit-tab:checked + label,
-.main-menu label {
+#exit-tab {
+    display: none;
+}
+
+.main-menu > #exit-tab:checked + label,
+.main-menu > label,
+.main-menu > div > form > label {
     box-sizing: border-box;
     display: inline-block;
     padding: 5px 25px;
@@ -251,7 +283,7 @@ main menu
     left:0;
     z-index:10;
 }
-.main-menu label:hover {
+.main-menu > label:hover {
     color: #93de83;
     cursor: pointer;
 }
