MOD: login form rename to "login-form"

--- a/src/main/resources/templates/Auth/login-fail.html
+++ b/src/main/resources/templates/Auth/login-fail.html
@@ -68,7 +68,7 @@
                     <p id="loginFailContent" class="login-fail-content">
                         <b th:text="${userDTO.errorMessage}"></b>
                     </p>
-                    <a th:href="@{/AUTH/login_form.html}">
+                    <a th:href="@{/AUTH/login-form.html}">
                         <input type="submit" value="Confirm" />
                     </a >
                 </div>
